--- a/package.json
+++ b/package.json
@@ -9,21 +9,20 @@
         "prebuild": "rimraf dist",
         "build": "nest build",
         "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-        "start": "nest start",
-        "start:dev": "nest start --watch",
-        "start:debug": "nest start --debug --watch",
+        "start": "yarn gen:gql-types && nest start --watch",
         "start:prod": "node dist/main",
-        "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-        "test": "jest",
-        "test:watch": "jest --watch",
-        "test:cov": "jest --coverage",
-        "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-        "test:e2e": "jest --config ./test/jest-e2e.json"
+        "gen:gql-types": "ts-node generate-gql-typings",
+        "lint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
+        "test": "jest"
     },
     "dependencies": {
+        "@nestjs/apollo": "^10.1.4",
         "@nestjs/common": "^9.0.0",
         "@nestjs/core": "^9.0.0",
+        "@nestjs/graphql": "^10.1.5",
         "@nestjs/platform-express": "^9.0.0",
+        "apollo-server-express": "^3.10.3",
+        "graphql": "^16.6.0",
         "reflect-metadata": "^0.1.13",
         "rimraf": "^3.0.2",
         "rxjs": "^7.2.0"
