--- a/.env
+++ b/.env
@@ -3,3 +3,13 @@ NODE_ENV=dev
 # API
 API_PORT=3000
 APP_API_BASE_PATH=/api/v1
+
+
+# This was inserted by `prisma init`:
+# Environment variables declared in this file are automatically made available to Prisma.
+# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
+
+# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
+# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
+
+DATABASE_URL="postgres://admin:admin@localhost:5432/todo-qa-demo"
