--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "scripts": {
         "prebuild": "rimraf dist",
         "build": "nest build",
+        "clean": "shx rm -rf dist",
         "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-        "start": "yarn gen:gql-types & nest start --watch",
+        "start": "yarn clean && yarn gen:gql-types & nest start --watch",
         "start:prod": "node dist/main",
         "gen:gql-types": "ts-node src/utils/generate-gql-typings",
         "db:up": "docker-compose -f database/docker-compose.yml up -d",
@@ -47,6 +48,7 @@
         "eslint-plugin-prettier": "^4.0.0",
         "jest": "28.1.2",
         "prettier": "^2.3.2",
+        "shx": "^0.3.4",
         "source-map-support": "^0.5.20",
         "supertest": "^6.1.3",
         "ts-jest": "28.0.5",
