--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@nestjs/common": "^9.0.0",
         "@nestjs/core": "^9.0.0",
         "@nestjs/graphql": "^10.1.5",
+        "@nestjs/mapped-types": "*",
         "@nestjs/platform-express": "^9.0.0",
         "@prisma/client": "4.5.0",
         "apollo-server-express": "^3.10.3",
