Add prisma scripts

--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
         "start": "yarn clean && yarn gen:gql-types & nest start --watch",
         "start:prod": "node dist/main",
         "gen:gql-types": "ts-node src/utils/generate-gql-typings",
+        "prisma:migrate": "yarn prisma migrate dev",
+        "prisma:generate": "yarn prisma generate",
+        "prisma:update": "yarn prisma:migrate && yarn prisma:generate",
         "db:up": "docker-compose -f database/docker-compose.yml up -d",
         "db:down": "docker-compose -f database/docker-compose.yml down",
         "lint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
